--- a/src/styles/__theme_colors.scss
+++ b/src/styles/__theme_colors.scss
@@ -3,16 +3,17 @@
 // THEME PALETTE 10 indigo-coolGrey ==========================================
 :root {
   // PRIMARY COLOR
-  --c-primary-50: 238, 242, 255;
-  --c-primary-100: 224, 231, 255;
-  --c-primary-200: 199, 210, 254;
-  --c-primary-300: 165, 180, 252;
-  --c-primary-400: 129, 140, 248;
-  --c-primary-500: 99, 102, 241;
-  --c-primary-600: 79, 70, 229;
-  --c-primary-700: 67, 56, 202;
-  --c-primary-800: 55, 48, 163;
-  --c-primary-900: 49, 46, 129;
+  --c-primary-50: 234, 235, 248;     /* lightest tone */
+  --c-primary-100: 215, 217, 241;
+  --c-primary-200: 185, 188, 229;
+  --c-primary-300: 150, 154, 210;
+  --c-primary-400: 110, 115, 180;
+  --c-primary-500: 80, 85, 140;
+  --c-primary-600: 60, 65, 115;
+  --c-primary-700: 45, 45, 99;       /* base */
+  --c-primary-800: 36, 36, 80;
+  --c-primary-900: 28, 28, 65;
+  
 
   // SECONDARY COLOR
   --c-secondary-50: 240, 253, 250;
